trying to fix all the images
absolute_url to relative_url

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="{{"/assets/custom.css" | relative_url }}">
 <!-- -->
     
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | relative_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
 </head>
