--- a/_includes/prev-next.html
+++ b/_includes/prev-next.html
@@ -9,7 +9,7 @@
                 {% endif %}
             </div>
             <div class="col-sm-4">
-                <a class="btn btn-primary btn-block my-1" href="{{ '/about/creative-team' | absolute_url }}"><span class="d-none d-md-inline">The </span>WI+RE Team</a>
+                <a class="btn btn-primary btn-block my-1" href="{{ '/about/creative-team' | relative_url }}"><span class="d-none d-md-inline">The </span>WI+RE Team</a>
             </div>
             <div class="col-sm-4">
                 {% if page.next.url %}
