--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@ layout: default
         <div class="col-lg-4">
             <a class="" href="{{ '/workshops' | relative_url }}">
                 <button class="btn btn-light h-100">
-                    <img src="{{ '/assets/images/icons/np_certificate_928715_1E4B88.png' | absolute_url }}" alt="Cornerstone Research Workshops Badge" class="w-50">
+                    <img src="{{ '/assets/images/icons/np_certificate_928715_1E4B88.png' | relative_url }}" alt="Cornerstone Research Workshops Badge" class="w-50">
                     <h2>Workshops</h2>
                     <p>Gain a solid foundation in academic research and writing!</p>
                 </button>
@@ -52,7 +52,7 @@ layout: default
         <div class="col-lg-4">
             <a href="{{ '/tutorials' | relative_url }}">
                 <button class="btn btn-light h-100">
-                    <img src="{{ '/assets/images/icons/np_wireframe_162980_1E4B88.png' | absolute_url }}" alt="Online tutorials" class="w-50">
+                    <img src="{{ '/assets/images/icons/np_wireframe_162980_1E4B88.png' | relative_url }}" alt="Online tutorials" class="w-50">
                     <h2>Tutorials</h2>
                     <p>Get right to it with quick and practical tutorials.</p>
                 </button>
@@ -61,7 +61,7 @@ layout: default
         <div class="col-lg-4">
             <a href="{{ '/handouts' | relative_url }}">
                 <button class="btn btn-light h-100">
-                    <img src="{{ '/assets/images/icons/np_report_1957810_1E4B88.png' | absolute_url }}" alt="Handouts and printable activities" class="w-50">
+                    <img src="{{ '/assets/images/icons/np_report_1957810_1E4B88.png' | relative_url }}" alt="Handouts and printable activities" class="w-50">
                     <h2>Handouts</h2>
                     <p>Prefer to work on paper? No problem - we make printable handouts, too.</p>
                 </button>
@@ -104,7 +104,7 @@ layout: default
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">We share!</span></h2>
             <p class="lead">As strong believers in open educational resources, all of our work is open source, and our tips can be shared, re-used, and re-mixed under creative commons Attribution-NonCommercial-ShareAlike license.</p>
-            <p>Want to collaborate? We would too! Check out <a href="http://github.com/uclalibrary/research-tips" target="_blank">our code repository</a> and <a href="{{ '/contact' | absolute_url }}">let us know your ideas!</a></p>
+            <p>Want to collaborate? We would too! Check out <a href="http://github.com/uclalibrary/research-tips" target="_blank">our code repository</a> and <a href="{{ '/contact' | relative_url }}">let us know your ideas!</a></p>
           </div>
           <div class="col-md-5 order-md-1">
             <img class="featurette-image img-fluid mx-auto" src="{{ '/assets/images/icons/np_open-education_33913_1E4B88.png' | relative_url }}" alt="Open Educational Resources">
@@ -129,9 +129,9 @@ layout: default
             <li class="media mt-2">
                         <a href="{{ tutorial.url | relative_url | replace: '//', '/' }}" class="mr-4 d-none d-md-block" style="max-width: 30%;">
                             {% if tutorial.thumbnail %}
-                                <img src="{{ tutorial.thumbnail | absolute_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="Tutorial icon">
+                                <img src="{{ tutorial.thumbnail | relative_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="Tutorial icon">
                             {% else %}
-                                <img src="{{ '/assets/images/icons/tutorial-tn.png' | absolute_url }}" class="mr-3 img-fluid" style="max-width: 100%;" alt="Tutorial icon">
+                                <img src="{{ '/assets/images/icons/tutorial-tn.png' | relative_url }}" class="mr-3 img-fluid" style="max-width: 100%;" alt="Tutorial icon">
                             {% endif %}
                         </a>
                     <div class="media-body">
@@ -169,9 +169,9 @@ layout: default
             <li class="media mt-2">
                         <a href="{{ workshop.url | relative_url | replace: '//', '/' }}" class="mr-4 d-none d-md-block" style="max-width: 30%;">
                             {% if workshop.thumbnail %}
-                                <img src="{{ workshop.thumbnail | absolute_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="workshop icon">
+                                <img src="{{ workshop.thumbnail | relative_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="workshop icon">
                             {% else %}
-                                <img src="{{ '/assets/images/icons/tutorial-tn.png' | absolute_url }}" class="mr-3 img-fluid" style="max-width: 100%;" alt="workshop icon">
+                                <img src="{{ '/assets/images/icons/tutorial-tn.png' | relative_url }}" class="mr-3 img-fluid" style="max-width: 100%;" alt="workshop icon">
                             {% endif %}
                         </a>
                     <div class="media-body">
