--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <script type="text/javascript" src="{{ "/assets/js/materialize-readies.js" | absolute_url }}"></script>
-    <script type="text/javascript" src="{{ "/assets/js/materialize.js" | absolute_url }}"></script>
+    <script type="text/javascript" src="{{ "/assets/js/materialize-readies.js" | relative_url }}"></script>
+    <script type="text/javascript" src="{{ "/assets/js/materialize.js" | relative_url }}"></script>
 {% endif %}
