--- a/_includes/info.html
+++ b/_includes/info.html
@@ -44,7 +44,7 @@
                  </p>
       {% endif %}
               <h5 class="card-title">Link</h5>
-                <p class="card-text"><a href="{{ page.url | relative_url }}">{{ page.url | relative_url }}</a></p>
+                <p class="card-text"><a href="{{ page.url | absolute_url }}">{{ page.url | absolute_url }}</a></p>
     </div>
 </div>
       
