turning "link" in info.html into a todo

--- a/_includes/info.html
+++ b/_includes/info.html
@@ -43,8 +43,11 @@
                     {% endfor %}
                  </p>
       {% endif %}
+      <!-- todo:: fix double research-tips -->
+      <!--
               <h5 class="card-title">Link</h5>
                 <p class="card-text"><a href="{{ page.url | absolute_url }}">{{ page.url | absolute_url }}</a></p>
+        -->
     </div>
 </div>
       
