--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,13 +19,18 @@ layout: default
           <h2 class="subheading">{{ page.subtitle }}</h2>
           {% endif %}
           <!-- this captures the list of team member names from site.team-members -->
-          {% capture member-name-list %}{{ site.team-members | map: 'title' | split: ',' }}{% endcapture %}
+          {% capture member-name-list %}{{ site.team-members | map: 'username' | split: ',' }}{% endcapture %}
           <!-- -->
           <span class="meta">{% if page.collection == "posts" %}Posted by{% else %}Created by{% endif %}
             {% if page.authors %}
                 {% for authorname in page.authors %}
                     {% if member-name-list contains authorname %}
-                        <a href="{{ authorname | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ authorname }}</a>{% if forloop.last == false %},{% endif %}
+                        {% for team-member in site.team-members %}
+                            {% if authorname == team-member.username %}
+                                <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname }}</a>
+                            {% endif %}
+                        {% endfor %}
+                        {% if forloop.last == false %},{% endif %}
                     {% else %}
                         {{ authorname }}{% if forloop.last == false %},{% endif %}
                     {% endif %}
