--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,8 +29,7 @@ layout: default
                             {% if authorname == team-member.username %}
                                 <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname }}</a>
                             {% endif %}
-                        {% endfor %}
-                        {% if forloop.last == false %},{% endif %}
+                        {% endfor %}{% if forloop.last == false %},{% endif %}
                     {% else %}
                         {{ authorname }}{% if forloop.last == false %},{% endif %}
                     {% endif %}
