--- a/_includes/info.html
+++ b/_includes/info.html
@@ -1,5 +1,5 @@
 <hr>
-{% capture member-name-list %}{{ site.team-members | map: 'title' | split: ',' }}{% endcapture %}
+{% capture member-name-list %}{{ site.team-members | map: 'username' | split: ',' }}{% endcapture %}
 <div class="card">
   <div class="card-header">
     About this {{ page.layout }}
@@ -22,7 +22,11 @@
                 {% if page.authors %}
                     {% for authorname in page.authors %}
                         {% if member-name-list contains authorname %}
-                            <a href="{{ authorname | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ authorname }}</a>{% if forloop.last == false %},{% endif %}
+                            {% for team-member in site.team-members %}
+                                {% if authorname == team-member.username %}
+                                    <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname }}</a>
+                                {% endif %}
+                            {% endfor %}{% if forloop.last == false %},{% endif %}
                         {% else %}
                             {{ authorname }}{% if forloop.last == false %},{% endif %}
                         {% endif %}
@@ -36,7 +40,11 @@
                   <p class="card-text">
                     {% for contributorname in page.contributors %}
                         {% if member-name-list contains contributorname %}
-                            <a href="{{ contributorname | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ contributorname }}</a>{% if forloop.last == false %},{% endif %}
+                            {% for team-member in site.team-members %}
+                                {% if contributorname == team-member.username %}
+                                    <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname }}</a>
+                                {% endif %}
+                            {% endfor %}{% if forloop.last == false %},{% endif %}
                         {% else %}
                             {{ contributorname }}{% if forloop.last == false %},{% endif %}
                         {% endif %}
