--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,9 +27,9 @@ layout: default
                     {% if member-name-list contains authorname %}
                         {% for team-member in site.team-members %}
                             {% if authorname == team-member.username %}
-                                <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname | remove: " " }}</a>
+                                <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname | remove: " " }}</a>{% if forloop.last == false %},{% endif %}
                             {% endif %}
-                        {% endfor %}{% if forloop.last == false %},{% endif %}
+                        {% endfor %}
                     {% else %}
                         {{ authorname }}{% if forloop.last == false %},{% endif %}
                     {% endif %}
