--- a/_includes/info.html
+++ b/_includes/info.html
@@ -41,10 +41,10 @@
                     {% for contributorname in page.contributors %}
                         {% if member-name-list contains contributorname %}
                             {%- for team-member in site.team-members -%}
-                                {% if contributorname == team-member.username %}
+                                {%- if contributorname == team-member.username -%}
                                     <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname }}</a>
-                                {% endif %}
-                            {%- endfor -%}{% if forloop.last == false %}*{% endif %}
+                                {%- endif -%}
+                            {%- endfor -%}{%- if forloop.last == false -%}*{%- endif -%}
                         {% else %}
                             {{ contributorname }}{% if forloop.last == false %},{% endif %}
                         {% endif %}
