--- a/_includes/info.html
+++ b/_includes/info.html
@@ -44,7 +44,7 @@
                                 {%- if contributorname == team-member.username -%}
                                     <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname }}</a>
                                 {%- endif -%}
-                            {%- endfor -%}{%- if forloop.last == false -%}*{%- endif -%}
+                            {%- endfor -%}{%- if forloop.last == false -%},{%- endif -%}
                         {% else %}
                             {{ contributorname }}{% if forloop.last == false %},{% endif %}
                         {% endif %}
