fix to author else statement

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,7 @@
                     {% endif %}
                 {% endfor %}
             {% else %}
-                {{ site.author }}</a>
+                <meta name="DC.creator" content="{{ site.author }}" />
     {% endif %}
     
     <!-- date -->
