more url fixes for zotero and dc

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -101,7 +101,7 @@
     <link rel="stylesheet" href="{{"/assets/custom.css" | relative_url }}">
 <!-- -->
     
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
+  <link rel="canonical" href="{{ site.url }}{{ page.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
 </head>
