adding UCLA Library branding / logos

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,6 +41,12 @@
         <p class="copyright text-muted">
             <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank"  aria-label="Creative Commons Attribution-NonCommercial-ShareAlike"><i class="fab fa-creative-commons  fa-3x"></i><i class="fab fa-creative-commons-by fa-3x"></i><i class="fab fa-creative-commons-nc fa-3x"></i><i class="fab fa-creative-commons-share fa-3x"></i></a><br>
             All content on this site is Creative Commons Attribution-NonCommercial-ShareAlike by  {{ site.author }} {{ 'now' | date: "%Y" }}</p>
+          <p class="text-center">The WI+RE team is grateful for the ongoing support of UCLA Library.</p>
+          <ul class="list-inline text-center">
+              <li class="list-inline-item">
+                  <img src="{{ '/assets/images/brand/Uxd_Blu_A_Library_300.png' | relative_url }}" alt="UCLA Library Logo" style="max-height: 75px;">
+              </li>
+          </ul>
       </div>
     </div>
   </div>
