--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,6 +19,7 @@ layout: default
             {% if site.description %}
                   <p><span class="subheading">{{ site.description }}</span></p>
             {% endif %}
+                  <p><span class="subheading"><img src="{{ '/assets/images/brand/Uxd_Wht_A_Library_300.png' | relative_url }}" alt="UCLA Library Logo" style="max-height: 75px;"></span></p>
               </div>
           </div>
         </div>
