--- a/_layouts/handout.html
+++ b/_layouts/handout.html
@@ -5,6 +5,7 @@ layout: post
 
 <div class="col-md-12">
             <div class="card">
+                  <iframe src="page.embed-url" width="100%" height="1000" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen></iframe> 
                 <a href="{{ page.handout-url  | relative_url }}"><img src="{{ page.thumbnail | relative_url }}" class="card-img-top" alt="{{ handout.title }}: {{ page.description }}"></a>
               <div class="card-body">
                   <h5 class="card-title">{{ page.title }}</h5>
